--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="good things">
-	<main class="bg-black text-white min-h-screen py-28">
-		<div class="max-w-xs md:max-w-2xl mx-auto flex flex-col gap-y-10">
+	<main class="py-20 bg-black text-white min-h-screen">
+		<div class="max-w-2xl mx-auto flex flex-col gap-y-10 px-8 md:px-0">
 			<a href="https://maps.app.goo.gl/YVbRwrV9dBDNDiZ79" target="_blank" class="hover:underline">Klodjen Djadja 1956</a>
 			<a href="https://maps.app.goo.gl/czd7wjHg42ZbMAbS8" target="_blank" class="hover:underline">Fajar Baru 2 Comboran</a>
 			<a href="https://maps.app.goo.gl/k8S7WA76L7AECMQV6" target="_blank" class="hover:underline">Warung Sempurno Sego Duro</a>
