--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="good things">
 	<main class="py-16 bg-black text-white min-h-screen">
-		<div class="max-w-2xl mx-auto">
-			<div class="flex flex-col gap-y-12 px-8 md:px-0">
+		<div class="max-w-2xl mx-auto px-8 md:px-0">
+			<div class="flex flex-col gap-y-12">
 				<a href="https://maps.app.goo.gl/YVbRwrV9dBDNDiZ79" target="_blank" rel="noopener noreferrer" class="self-start decoration-[#535759] decoration-from-font underline underline-offset-2 transition-all hover:text-white/80">Klodjen Djadja 1956</a>
 				<a href="https://maps.app.goo.gl/czd7wjHg42ZbMAbS8" target="_blank" rel="noopener noreferrer" class="self-start decoration-[#535759] decoration-from-font underline underline-offset-2 transition-all hover:text-white/80">Fajar Baru 2 Comboran</a>
 				<a href="https://maps.app.goo.gl/k8S7WA76L7AECMQV6" target="_blank" rel="noopener noreferrer" class="self-start decoration-[#535759] decoration-from-font underline underline-offset-2 transition-all hover:text-white/80">Warung Sempurno Sego Duro</a>
